Fix overflow-able component
If we set grid-template-columns: 1fr, it can be overflow-able along x-axis. So we must set it minmax(0, 1fr)

--- a/styles/blog/badblog.scss
+++ b/styles/blog/badblog.scss
@@ -3,7 +3,7 @@
 
 .bad_blog_wrapper {
     display: grid;
-    overflow: hidden;
+    grid-template-columns: minmax(0, 1fr);
     gap: var(--main-margin);
 
     @keyframes rainbow {
